<resources>

    <string name="app_name">Delivery Boy</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="Terms_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="forgot_pass">Forget Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="social">Connect with social</string>
    <string name="already_account">Already Have a account? Sign in</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">Alert</string>
    <string name="r_u_sure_u_want_to_exit">Are you sure? you want to exit.</string>
    <string name="logout_msg">Logout!</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_to_foodie">Welcome to Foodie</string>
    <string name="discover_new_dishes_everyday_and_hold_your_favourite_restaurant">Discover new dishes everyday and hold your favourite restaurant</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="your_order_getting_cooked">Your order getting cooked</string>
    <string name="order_pickedup">Order Pickedup</string>
    <string name="your_order_is_on_its_way">Your order is on its way</string>
    <string name="details">DETAILS</string>
    <string name="help">HELP</string>
    <string name="order_number">Order Number</string>
    <string name="payment">Payment</string>
    <string name="date">Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="deliver_to">Deliver To</string>
    <string name="contact_support">Contact Support</string>
    <string name="verification_code_send_to_your_mobile_number">Verification code send to your mobile number</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="don_t_receive_the_code">Don\'t receive the code?</string>
    <string name="resend">RESEND</string>
    <string name="search">Search</string>
    <string name="chat">CHAT</string>
    <string name="change_password">Change Password</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="plz_enter_your_phone_number">Please enter your phone number</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="plz_enter_your_name">Please enter your name</string>
    <string name="plz_enter_your_email_id">Please enter your email id</string>
    <string name="plz_enter_your_password">Please enter your password</string>
    <string name="plz_enter_your_conf_password">Please enter confirm password</string>
    <string name="plz_enter_valid_conf_password">Please enter valid confirm password</string>
    <string name="please_enter_your_old_password">Please enter your old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_conf_password">Please enter confirm password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="internet_error">Internet Connection error!</string>
    <string name="restry">RETRY</string>
    <string name="no_order_found">No Order Found</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="accept_order">Accept Order</string>
    <string name="reject_order">Reject Order</string>
    <string name="view_order_details">View Order Details</string>
    <string name="type_message">Type Message</string>
    <string name="order_picked_up">Order Picked Up</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="plz_allow_loc_per">Please Allow your location</string>
    <string name="plz_allow_for_best_results">Please allow your location permission. so that we can provide you best results</string>
    <string name="ok">OK</string>
    <string name="update_profile">Update Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="set_your_presence">Set Your Presence</string>
    <string name="searching_for_orders">Searching for orders..</string>
    <string name="plz_allow_call_per">Please Allow Call Permission</string>
    <string name="plz_allow_call">Allow call permission to make a phone call</string>
    <string name="payment_status">Payment Status</string>
    <string name="customer_paid_amount">Please check the customer paid the order amount or not</string>
    <string name="ordered_items">Ordered Items:</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="new_password">New Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_wait">Please wait...</string>
    <string name="order_pickup_address">Order Pickup Address</string>
    <string name="order_deliver_address">Order Deliver Address</string>
    <string name="call_customer">Call Customer</string>
    <string name="chat_with_customer">Chat with customer</string>
    <string name="ordred_items">Ordered Items</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="service_tax">Service Tax</string>
    <string name="discount">Discount</string>
    <string name="exit_from_app">Do you want to exit from app?</string>
    <string name="plz_enter_otp">Please enter OTP</string>
    <string name="plz_entr_valid_code">Please enter valid code</string>
    <string name="order_amount">Order Amount $</string>
    <string name="items">Items</string>
    <string name="pay_">Payment:</string>
    <string name="grand_total">Grand Total    $</string>
    <string name="un_paid">Un-Paid</string>
    <string name="new_order_received">New Order Received</string>
    <string name="your_order_number_is">Your order number is</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="plz_entr_your_email">Please enter your email</string>
    <string name="plz_entr_your_mob_number">Please enter your mobile number</string>
    <string name="customer_paid_the_order_amount">Customer paid the order amount</string>
    <string name="chaneel_id">com.valle.deliveryboyfoodieapp</string>
    <string name="customer_note">Customer Note:</string>
    <string name="select_any_option_for_n_order_history_search">Seleccione cualquier opción para \n buscar en el historial de pedidos</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_five_day">Last 5 days</string>
    <string name="last_ten_day">Last 10 days</string>
    <string name="last_twenty_days">Last 20 days</string>
    <string name="last_one_month">Last 1 month</string>
    <string name="last_two_month">Last 2 month</string>
    <string name="last_three_month">Last 3 month</string>
    <string name="total">Total</string>
</resources>
