<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_back_green"
    android:orientation="vertical"
    android:padding="@dimen/tendp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tendp"
        android:gravity="center"
        android:text="@string/payment_status"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteensp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPaymentAmountAndStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tendp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_five_sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tendp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbOrderAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_paid_the_order_amount"
            android:textSize="@dimen/dim14sp"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSubmit"
        android:layout_width="@dimen/dim150dp"
        android:layout_height="@dimen/fortydp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twentydp"
        android:background="@color/white"
        android:text="@string/submit"
        android:textSize="@dimen/dim14sp"
        android:textColor="@color/foodie_color" />

</androidx.appcompat.widget.LinearLayoutCompat>